--- a/mac.yml
+++ b/mac.yml
@@ -80,7 +80,7 @@
     - { cask_app_name: "sequel-pro", tags: ["sequel_pro","stage_2"], role: danbohea.cask-app }
     - { cask_app_name: "postico", tags: ["postico","stage_2"], role: danbohea.cask-app }
     # - { mas_app_name: "Postico", mas_app_id: "1031280567", tags: ["postico","stage_2"], role: mas_app }
-    - { cask_app_name: "pgadmin4", tags: ["pgadmin","stage_2"], role: danbohea.cask-app }
+    # - { cask_app_name: "pgadmin4", tags: ["pgadmin","stage_2"], role: danbohea.cask-app }
         
     # REST Tools
     - { cask_app_name: "paw", tags: ["paw","stage_2"], role: danbohea.cask-app }
@@ -151,10 +151,10 @@
     # - { mas_app_name: "DaisyDisk", mas_app_id: "411643860", tags: ["daisydisk","stage_5"], role: mas_app }
     - { cask_app_name: "appcleaner", tags: ["appcleaner","stage_5"], role: danbohea.cask-app }
     - { cask_app_name: "cleanmymac", tags: ["cleanmymac","stage_5"], role: danbohea.cask-app }
-    - { cask_app_name: "bartender", role: danbohea.cask-app, tags: ["bartender","stage_5"] }
+    # - { cask_app_name: "bartender", role: danbohea.cask-app, tags: ["bartender","stage_5"] }
   
     # Other
-    - { cask_app_name: "dash", tags: ["dash","stage_4"], role: danbohea.cask-app }
+    # - { cask_app_name: "dash", tags: ["dash","stage_4"], role: danbohea.cask-app }
     - { cask_app_name: "knuff", tags: ["knuff","stage_4"], role: danbohea.cask-app }
     - { cask_app_name: "ngrok", tags: ["ngrok","stage_4"], role: danbohea.cask-app }
     - { brew_pkg_name: "ssh-copy-id", tags: ["ssh-copy-id","stage_4"], role: brew_pkg }
