--- a/roles/mas/tasks/main.yml
+++ b/roles/mas/tasks/main.yml
@@ -17,17 +17,17 @@
     - no_ci
 
 - name: Sign in to MAS when email and password are provided.
-  shell: 'mas signin "{{ app_store_email }}" "{{ app_store_password }}"'
+  shell: 'mas signin "{{ mas_email }}" "{{ mas_password }}"'
   register: mas_signin_result
-  when: mas_account_result.rc == 1 and app_store_email != '' and app_store_password != '' and not mas_signin_dialog
+  when: mas_account_result.rc == 1 and mas_email != '' and mas_password != '' and not mas_signin_dialog
   tags:
     - mas
     - no_ci
 
 - name: Sign in to MAS when email is provided, and complete password and 2FA using dialog.
-  shell: 'mas signin "{{ app_store_email }}" "{{ app_store_password }}" --dialog'
+  shell: 'mas signin "{{ mas_email }}" "{{ mas_password }}" --dialog'
   register: mas_signin_result
-  when: mas_signin_dialog and mas_account_result.rc == 1 and app_store_email != ''
+  when: mas_signin_dialog and mas_account_result.rc == 1 and mas_email != ''
   tags:
     - mas
     - no_ci
