--- a/requirements.yml
+++ b/requirements.yml
@@ -1,12 +1,4 @@
 ---
-
-- src: danbohea.cask-app
-  version: master
-- src: danbohea.homebrew
-  version: master
-- src: danbohea.flux
-  version: master
-- src: danbohea.spelling
-  version: master
-- src: danbohea.dock-items
-  version: master
+- name: danbohea.homebrew
+- name: geerlingguy.mas
+- name: geerlingguy.dotfiles
