--- a/roles/xcode/tasks/main.yml
+++ b/roles/xcode/tasks/main.yml
@@ -1,10 +1,9 @@
 ---
-
 - include_role:
-    name: mas_app
+    name: geerlingguy.mas
   vars:
-    mas_app_name: Xcode
-    mas_app_id: 497799835
+    mas_installed_apps:
+      - { id: 497799835, name: "Xcode" }
 
 - name: List installed MAS apps again.
   command: mas list
