--- a/tasks/packages/packages-gem.yml
+++ b/tasks/packages/packages-gem.yml
@@ -7,4 +7,5 @@
     version: "{{ item.version | default(omit) }}"
     user_install: no
     executable: "{{ item.executable | default(omit) }}"
+  become: true
   with_items: "{{ gem_packages }}"
