--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,29 @@
 ---
 
+os: osx
+sudo: required
+
 matrix:
   include:
     # macOS 10.12
-    - os: osx
-      osx_image: xcode8.2
+    - osx_image: xcode8.3
     # macOS 10.11
-    - os: osx
-      osx_image: xcode8
+    - osx_image: xcode8
   fast_finish: true
 
 install:
+  - pip install pexpect
   # Debug info
   - python --version
   # Run setup script
-  - bash init.sh
+  - bash install-deps.sh
   # Debug info
   - pip --version
   - ansible --version
 
 script:
   # Playbook syntax check
-  - ansible-playbook mac.yml --syntax-check
+  - ansible-playbook main.yml -i inventory --syntax-check
   # Run Ansible playbook:
   # - Skip tasks/roles that we know cause issues in Travis
-  - ansible-playbook mac.yml --skip-tags "no_ci"
+  - ansible-playbook main.yml -i inventory --extra-vars "@test.config.json" --skip-tags "skip_ci,xcode"
