--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,15 +6,13 @@ jobs:
       xcode: "9.0"
     steps:
       - checkout
-      - run: bash install-deps.sh
+      - run: bash init.sh
       # Debug info
-      - run: pip install pexpect
       - run: python --version
-      - run: pip --version
       - run: ansible --version
       # Run
-      - run: ansible-playbook main.yml -i inventory --syntax-check
-      - run: ansible-playbook main.yml -i inventory --extra-vars "@test.config.json" --skip-tags "skip_ci,xcode"
+      - run: ansible-playbook playbook.yml --syntax-check
+      - run: ansible-playbook playbook.yml --skip-tags "skip_ci,xcode"
 
 workflows:
   version: 2
