--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 gathering = smart
+inventory = ./config/hosts
 log_path = ./ansible.log
 roles_path = ext_roles
-# roles_path = ./roles:/etc/ansible/roles
