--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -1,7 +1,11 @@
 ---
-# Visual Studio Code Extensions.
+
+- name: Install Visual Studio Code.
+  homebrew_cask: name=visual-studio-code state=present
+  notify: brew cask cleanup
+
 - name: Ensure VS Code extensions are installed
   command: code --install-extension {{ item.id | default(item) }}
-  with_items: "{{ vscode_packages }}"
+  with_items: "{{ vscode_extensions }}"
   register: vscode_result
   changed_when: "'already installed' not in vscode_result.stdout"
