--- a/roles/node_pkgs/tasks/main.yml
+++ b/roles/node_pkgs/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
-# Python.
-- name: Install global Pip packages.
-  pip:
+
+- name: Install global node packages
+  npm:
     name: "{{ item.name | default(item) }}"
     state: "{{ item.state | default('present') }}"
     version: "{{ item.version | default(omit) }}"
-    executable: "{{ item.executable | default(omit) }}"
-  with_items: "{{ pip_packages }}"
+    global: yes
+  with_items: "{{ node_pkgs_list }}"
