--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run: ansible --version
       # Run
       - run: ansible-playbook playbook.yml --syntax-check
-      - run: ansible-playbook playbook.yml --skip-tags "skip_ci,xcode"
+      - run: ansible-playbook playbook.yml --skip-tags "skip_ci,mas_app,xcode"
 
 workflows:
   version: 2
