--- a/mac-custom.yml
+++ b/mac-custom.yml
@@ -9,95 +9,147 @@
   roles:
     # Prep
     # --------------------------------------------------------------------------
+
     - { role: macos, tags: ["macos","prep"] }
+    - { brew_pkg_name: "openssl", tags: ["openssl","prep"], role: brew_pkg }
+    - { brew_pkg_name: "curl", brew_pkg_install_options: "with-nghttp2", brew_pkg_post_install: "/usr/local/bin/brew link --force curl", tags: ["curl","prep"], role: brew_pkg }
     # - { role: ssh, tags: ["ssh","prep"] }
-    # 
-    - { mas_app_name: "1 Password", mas_app_id: "443987910" , tags: ["1password","prep","mas_app"], role: mas_app }
-    
-    # - { role: danbohea.google-chrome, tags: ["google_chrome","prep"] }
     - { cask_app_name: "dropbox", tags: ["dropbox","prep"], role: danbohea.cask-app }
     - { role: atom, tags: ["atom","prep","no_ci"] }
     - { role: vscode, tags: ["vscode","visual-studio-code","prep","no_ci"] }
     # - { role: danbohea.quick-look-plugins, tags: ["quick_look_plugins","prep","no_ci"] }
     # - { role: terminal, tags: ["terminal","prep"] }
-    - { brew_pkg_name: "openssl", tags: ["openssl","prep"], role: brew_pkg }
-    - { brew_pkg_name: "curl", brew_pkg_install_options: "with-nghttp2", brew_pkg_post_install: "/usr/local/bin/brew link --force curl", tags: ["curl","prep"], role: brew_pkg }
-    
 
-    # # Stage 1: Essential day-to-day
-    # # --------------------------------------------------------------------------
+    # Stage 1: Essential day-to-day
+    # --------------------------------------------------------------------------
 
     # - { role: dotfiles, tags: ["dotfiles","stage_1"] }
     - { mas_app_name: "Magnet", mas_app_id: "441258766" , tags: ["magnet","stage_1","mas_app"], role: mas_app }
-    
-    # - { role: time_machine, tags: ["time_machine","stage_1"] }
-    # - { cask_app_name: "caffeine", tags: ["caffeine","stage_1","sudo"], role: danbohea.cask-app }
-    # - { cask_app_name: "alfred", tags: ["alfred","stage_1","sudo"], role: danbohea.cask-app }
-    # - { role: path_finder, tags: ["path_finder","stage_1"] }
+    - { mas_app_name: "1 Password", mas_app_id: "443987910" , tags: ["1password","stage_1","mas_app"], role: mas_app }
+    - { mas_app_name: "Spark", mas_app_id: "1176895641" , tags: ["spark","stage_1","mas_app"], role: mas_app }
+    - { mas_app_name: "Reeder", mas_app_id: "880001334" , tags: ["reeder","stage_1","mas_app"], role: mas_app }
+    - { mas_app_name: "Pages", mas_app_id: "409201541" , tags: ["pages","stage_1","mas_app"], role: mas_app }
+    - { mas_app_name: "Numbers", mas_app_id: "409203825" , tags: ["numbers","stage_1","mas_app"], role: mas_app }
+    - { mas_app_name: "Keynote", mas_app_id: "409183694" , tags: ["cleanmydrive","stage_1","mas_app"], role: mas_app }
+    # - { cask_app_name: "skype", tags: ["skype","stage_1"], role: danbohea.cask-app }
+    - { cask_app_name: "archiver", tags: ["archiver","stage_1"], role: danbohea.cask-app }
     # - { cask_app_name: "the-unarchiver", tags: ["the_unarchiver","stage_1"], role: danbohea.cask-app }
-    # - { cask_app_name: "keyboard-maestro", tags: ["keyboard_maestro","stage_1"], role: danbohea.cask-app }
-    # - { role: danbohea.skype, tags: ["skype","stage_1","no_ci"] }
-    # - { cask_app_name: "muzzle", tags: ["muzzle","stage_1"], role: danbohea.cask-app }
+    - { cask_app_name: "keepingyouawake", tags: ["keepingyouawake","stage_1"], role: danbohea.cask-app }
+    # - { cask_app_name: "spotify", tags: ["spotify","stage_4"], role: danbohea.cask-app }
 
-    # # Stage 2: Essential dev
-    # # --------------------------------------------------------------------------
+    # - { role: time_machine, tags: ["time_machine","stage_1"] }
+
+    # Stage 2: Essential dev
+    # --------------------------------------------------------------------------
 
     - { role: git, tags: ["git","stage_2"] }
     - { role: node_pkgs, tags: ["node_pkgs","stage_2"] }
+    - { cask_app_name: "gpgtools", tags: ["gpgtools","stage_2"], role: danbohea.cask-app }
     - { brew_pkg_name: "yarn", tags: ["yarn","stage_2"], role: brew_pkg }
+    
+    - { role: xcode, tags: ["xcode","stage_2"] }
+    
+    # IM
+    - { mas_app_name: "Slack", mas_app_id: "803453959" , tags: ["slack","stage_2","mas_app"], role: mas_app }
+    # - { cask_app_name: "riot", tags: ["riot","stage_2"], role: danbohea.cask-app }
+
+    # CVS 
     - { cask_app_name: "kaleidoscope", tags: ["kaleidoscope","stage_2"], role: danbohea.cask-app }
     - { cask_app_name: "p4merge", tags: ["p4merge","stage_2"], role: danbohea.cask-app }
+    - { cask_app_name: "araxis-merge", tags: ["araxis-merge","stage_2"], role: danbohea.cask-app }
     - { cask_app_name: "github", tags: ["github","stage_2"], role: danbohea.cask-app }
     - { role: tower, tags: ["tower","stage_2"] }
+
+    # DB Tools
+    # - { brew_pkg_name: "sqlite", tags: ["sqlite","stage_2"], role: brew_pkg }
+    # - { brew_pkg_name: "mongodb", tags: ["mongodb","stage_2"], role: brew_pkg }
+    # - { brew_pkg_name: "mysql", tags: ["mysql","stage_2"], role: brew_pkg }
+    # - { brew_pkg_name: "postgresql", tags: ["postgresql","stage_2"], role: brew_pkg }
+    
+    # DB Clients
     # - { cask_app_name: "sequel-pro", tags: ["sequel_pro","stage_2"], role: danbohea.cask-app }
+    # - { cask_app_name: "pgadmin4", tags: ["pgadmin4","stage_2"], role: danbohea.cask-app }
+    # - { cask_app_name: "postico", tags: ["postico","stage_2"], role: danbohea.cask-app }
+    # - { cask_app_name: "robo-3t", tags: ["robo-3t","stage_2"], role: danbohea.cask-app }
+
+    # Rest Tools
+    - { cask_app_name: "insomnia", tags: ["insomnia","stage_2"], role: danbohea.cask-app }
+    # - { cask_app_name: "paw", tags: ["paw","stage_2"], role: danbohea.cask-app }
+
+    # Others
+    # - { cask_app_name: "knuff", tags: ["knuff","stage_1"], role: danbohea.cask-app }
     # - { cask_app_name: "xscope", tags: ["xscope","stage_2"], role: danbohea.cask-app }
-    # - { cask_app_name: "slack", tags: ["slack","stage_2"], role: danbohea.cask-app }
     # - { role: bash_completion, tags: ["bash_completion","stage_2"] }
 
-    # # Stage 3: Projects
-    # # --------------------------------------------------------------------------
+    # Stage 3: Projects
+    # --------------------------------------------------------------------------
 
     # - { role: projects, tags: ["projects","stage_3"] }
 
-    # # Stage 4: Remaining apps.
-    # # CI can skip these. This makes for faster tests & keeps Travis log
-    # # verbosity to a minimum.
-    # # --------------------------------------------------------------------------
+    # Stage 4: Remaining apps.
+    # --------------------------------------------------------------------------
 
-    # - { cask_app_name: "toggldesktop", tags: ["toggldesktop","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "docker", tags: ["docker","stage_4"], role: danbohea.cask-app }
+    # Browsers
+    - { cask_app_name: "google-chrome", tags: ["google-chrome","stage_4"], role: danbohea.cask-app }
+    - { cask_app_name: "opera", tags: ["opera","stage_4"], role: danbohea.cask-app }
+    - { cask_app_name: "firefox", tags: ["firefox","stage_4"], role: danbohea.cask-app }
+   
+    # Docker Tools
+    - { cask_app_name: "docker", tags: ["docker","stage_4"], role: danbohea.cask-app }
+    - { cask_app_name: "dockstation", tags: ["dockstation","stage_4"], role: danbohea.cask-app }
     # - { cask_app_name: "kitematic", tags: ["kitematic","stage_4"], role: danbohea.cask-app }
-    - { role: transmission, tags: ["transmission","stage_4"] }
-    # - { brew_pkg_name: "tree", tags: ["tree","stage_4"], role: brew_pkg }
-    # - { brew_pkg_name: "wget", tags: ["wget","stage_4"], role: brew_pkg }
-    # - { brew_pkg_name: "ssh-copy-id", tags: ["ssh-copy-id","stage_4"], role: brew_pkg }
-    # - { cask_app_name: "android-platform-tools", tags: ["android_platform_tools","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "istat-menus", role: danbohea.cask-app, tags: ["istat_menus","stage_4","no_ci"] }
-    # - { cask_app_name: "firefox", tags: ["firefox","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "opera", tags: ["opera","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "opera-mobile-emulator", tags: ["opera_mobile_emulator","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "adobe-creative-cloud", tags: ["adobe_creative_cloud","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "malwarebytes-anti-malware", tags: ["malwarebytes","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "google-hangouts", tags: ["google_hangouts","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "hazel", tags: ["hazel","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "cakebrew", tags: ["cakebrew","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "limechat", tags: ["limechat","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "daisydisk", tags: ["daisydisk","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "flash-player", tags: ["flash_player","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "name-mangler", tags: ["name_mangler","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "skitch", tags: ["skitch","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "vlc", tags: ["vlc","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "google-backup-and-sync", role: danbohea.cask-app, tags: ["google_backup_and_sync","stage_4"] }
-    # - { cask_app_name: "sketchup", role: danbohea.cask-app, tags: ["sketchup","stage_4"] }
-    # - { cask_app_name: "bartender", role: danbohea.cask-app, tags: ["bartender","stage_4"] }
-    # - { cask_app_name: "doxie", tags: ["doxie","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "omnigraffle", tags: ["omnigraffle","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "appcleaner", tags: ["appcleaner","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "steam", tags: ["steam","stage_4"], role: danbohea.cask-app }
-    # - { cask_app_name: "licecap", tags: ["licecap","stage_4"], role: danbohea.cask-app }
+    - { brew_pkg_name: "docker-clean", tags: ["docker-clean","stage_4"], role: brew_pkg }
 
-    # # Last
-    # # --------------------------------------------------------------------------
+    # Virtual Machine
+    # - { cask_app_name: "parallels-desktop", tags: ["parallels-desktop","stage_4"], role: danbohea.cask-app }
+    # - { cask_app_name: "vmware-fusion", tags: ["vmware-fusion","stage_4"], role: danbohea.cask-app }
+
+    # Video Players
+    - { cask_app_name: "iina", tags: ["iina","stage_4"], role: danbohea.cask-app }
+    # - { cask_app_name: "vlc", tags: ["vlc","stage_4"], role: danbohea.cask-app }
+
+    # Share
+    - { role: transmission, tags: ["transmission","stage_4"] }
+    # - { cask_app_name: "google-backup-and-sync", tags: ["google-backup-and-sync","stage_4"], role: danbohea.cask-app }
+    # - { cask_app_name: "ngrok", tags: ["ngrok","stage_4"], role: danbohea.cask-app }
+
+    # Utilities
+    - { cask_app_name: "appcleaner", tags: ["appcleaner","stage_4"], role: danbohea.cask-app }
+    - { cask_app_name: "authy-desktop", tags: ["authy-desktop","stage_4"], role: danbohea.cask-app }
+    - { mas_app_name: "CleanMyDrive 2", mas_app_id: "523620159" , tags: ["cleanmydrive","stage_1","mas_app"], role: mas_app }
+    # - { cask_app_name: "cleanmymac", tags: ["cleanmymac","stage_4"], role: danbohea.cask-app }
+    # - { cask_app_name: "daisydisk", tags: ["daisydisk","stage_4"], role: danbohea.cask-app }
+    - { cask_app_name: "launchrocket", tags: ["launchrocket","stage_4"], role: danbohea.cask-app }
+
+    # Swift Related
+    - { brew_pkg_name: "vapor", tags: ["vapor","stage_4"], role: brew_pkg }
+    - { brew_pkg_name: "swiftlint", tags: ["swiftlint","stage_4"], role: brew_pkg }
+    - { brew_pkg_name: "swiftenv", tags: ["swiftenv","stage_4"], role: brew_pkg }
+    
+    # Ruby Related
+    # - { brew_pkg_name: "rbenv", tags: ["rbenv","stage_4"], role: brew_pkg }
+    # - { brew_pkg_name: "ruby-build", tags: ["ruby-build","stage_4"], role: brew_pkg }
+
+    # Go Related
+    # - { brew_pkg_name: "go", tags: ["go","stage_4"], role: brew_pkg }
+
+    # Others
+    - { mas_app_name: "Money", mas_app_id: "1185488696" , tags: ["money","stage_4","mas_app"], role: mas_app }
+    - { cask_app_name: "cakebrew", tags: ["cakebrew","stage_4"], role: danbohea.cask-app }
+    # - { cask_app_name: "daisydisk", tags: ["daisydisk","stage_4"], role: danbohea.cask-app }
+    # - { cask_app_name: "bartender", role: danbohea.cask-app, tags: ["bartender","stage_4"] }
+    # - { cask_app_name: "omnigraffle", tags: ["omnigraffle","stage_4"], role: danbohea.cask-app }
+
+    # CLI Tools
+    - { brew_pkg_name: "tree", tags: ["tree","stage_4"], role: brew_pkg }
+    # - { brew_pkg_name: "wget", tags: ["wget","stage_4"], role: brew_pkg }
+    - { brew_pkg_name: "ssh-copy-id", tags: ["ssh-copy-id","stage_4"], role: brew_pkg }
+    # - { brew_pkg_name: "heroku", tags: ["heroku","stage_4"], role: brew_pkg }
+    # - { brew_pkg_name: "openshift-cli", tags: ["openshift-cli","stage_4"], role: brew_pkg }
+    # - { brew_pkg_name: "gitlab-runner", brew_pkg_install_options: "without-docker", tags: ["gitlab-runner","stage_4"], role: brew_pkg }
+    
+    # Last
+    # --------------------------------------------------------------------------
 
     # - { role: danbohea.dock-items, tags: ["dock_items","last","always"] }
     # - { role: login_items, tags: ["login_items","last","always"] }
