--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -1,7 +1,10 @@
 ---
 
 - name: Install Git
-  homebrew: name=git
+  homebrew: name={{ item }}
+  with_items:
+    - git
+    - diff-so-fancy
   notify: brew cleanup
 
 # Get Git current config
@@ -25,17 +28,26 @@
   changed_when: false
   ignore_errors: yes
 
+- name: Get current Git core.pager
+  command: git config --global --get core.pager
+  register: git_core_pager_result
+  changed_when: false
+  ignore_errors: yes
+
 # Set Git config if required
 # ------------------------------------------------------------------------------
-
 - name: Configure push.default
   command: git config --global push.default "{{ git_push_default }}"
   when: git_push_default_result.stdout != git_push_default
 
 - name: Configure user.name
   command: git config --global user.name "{{ git_user_name }}"
-  when: git_user_email_result.stdout != git_user_name
+  when: git_user_name_result.stdout != git_user_name
 
 - name: Configure user.email
   command: git config --global user.email "{{ git_user_email }}"
   when: git_user_email_result.stdout != git_user_email
+
+- name: Configure diff-so-fance
+  command: git config --global core.pager "diff-so-fancy | less --tabs=4 -RFX"
+  when: git_core_pager_result.stdout != "diff-so-fancy | less --tabs=4 -RFX"
