--- a/roles/xcode/tasks/main.yml
+++ b/roles/xcode/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 - include_role:
-    name: geerlingguy.mas
+    name: mas_app
   vars:
-    mas_installed_apps:
-      - { id: 497799835, name: "Xcode" }
+    mas_app_name: "Xcode"
+    mas_app_id: 497799835
 
 - name: List installed MAS apps again.
   command: mas list
