--- a/config.yml
+++ b/config.yml
@@ -82,3 +82,14 @@ git_user_email: "gperdomor@gmail.com"
 
 mas_email: ""
 mas_password: ""
+
+# -----------
+# SSH Config
+# --------------------------------------------------------------------------
+ssh_keys:
+  - name: github
+    host: github.com
+    passphrase: ""
+  - name: gitlab
+    host: gitlab.com
+    passphrase: ""
