--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
+ansible_python_interpreter = /usr/local/bin/python2
 gathering = smart
 inventory = ./config/hosts
 log_path = ./ansible.log
